2020-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-gbz80.def:
	  improve z80 peephole functions, patch by Baŝto.
	* device/include/mcs51/stc89.h:
	  STC89 header, patch by Diego Elio Pettenò.

2020-06-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAddrOf): Make better use of HX

2020-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  support/valdiag/tests/bug-3011.c:
	  Fix bug #3011.

2020-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  support/valdiag/tests/bug-3014.c:
	  Fix bug #3014.

2020-06-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-gbz80.def:
	  notUsed for gbz80, patch by Baŝto.

2020-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Fix bug #3006, patch by Roy Rankin.

2020-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c,
	  src/SDCCast.c,
	  support/valdiag/tests/bug-3010.c:
	  Fix bug #3010.
	* src/SDCC.y,
	  support/valdiag/tests/bug-3009.c:
	  Fix bug #3009.
	* src/stm8/gen.c:
	  Improve assignment from 8-bit I/O to file-scope and static objects.

2020-06-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: added rule 302

2020-05-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (getRegBitTry): reverted to getRegBit
	  (serialRegAssign): prefer to spil bit over using register
	  (fillGaps): bug fix, do not change reg_type

2020-05-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve comparison with 0xff.

2020-05-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3007.c:
	  Improve jump-on-decrement.

2020-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/atomic_flag_test_and_set.c: fix warning
	* device/lib/s08/atomic_flag_test_and_set.c: fix warning

2020-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,